# path_planning

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  environment.yml  main.py  make_pso_gif.py  pyproject.toml  requirements.txt  run_RS_SA_PH_test.py  run_rs_sa_ph_benchmark.py
artifacts/exp/tuning/: tuning_runs.parquet  tuning_summary.json
data/: README.md
notebooks/: README.md
src/: environment.py
src/PSO/: Config.py  PSO.py  Particule.py  Path.py  Swarm.py  Waypoint.py  particle.py  path_model.py  pso_config.py  pso_solver.py  swarm_model.py  waypoint_model.py
src/RRT/: RRT.py
src/benchmark/: __init__.py  __main__.py  algo_profiles.py  benchmark_algo_vs_basic.py  performance.py  plot_all_algos.py  pso_dimVtempVvanilla.py  run_pipeline.py  tune_algo_bayes.py
src/benchmark/archive/: README.md
src/benchmark/archive/RS/benchmark/: comparison_table.csv
src/benchmark/archive/RS_SA_CC/benchmark/: benchmark_runs.parquet  benchmark_summary.json  (+1 more)
src/benchmark/archive/all_algos_seed43/: same_seed_runs.csv  same_seed_runs.parquet  same_seed_summary.json
src/benchmark/archive/all_algos_seed47/: same_seed_runs.csv  same_seed_runs.parquet  same_seed_summary.json
src/benchmark/core/: __init__.py  algo_profiles.py  common.py  config.py
src/benchmark/jobs/: __init__.py  benchmark_algo_vs_basic.py  run_pipeline.py  tune_algo_bayes.py
src/benchmark/viz/: __init__.py  plot_algo_comparisons.py  plot_tuning_curves.py
src/benchmarking/: compare.py
tests/: test_environment_collision.py  test_particule_velocity_shape.py  test_path_pruning.py  test_smoke.py
(+68 files in other folders)
